# hi-sweetheart

./: .gitignore  MEMORY.md  README.md  com.hi-sweetheart.plist  config.json.example  pyproject.toml
.claude/projects/-Users-zhouzhen24-Documents-coding-ml/memory/: feedback_podcast_bookmark_not_subscribe.md
docs/superpowers/plans/: 2026-03-23-hi-sweetheart-implementation.md
docs/superpowers/specs/: 2026-03-23-hi-sweetheart-design.md
src/hi_sweetheart/: __init__.py  actions.py  classifier.py  config.py  dashboard.html  fetcher.py  items.py  main.py  notify.py  reader.py  server.py  state.py
tests/: test_actions.py  test_classifier.py  test_config.py  test_fetcher.py  test_integration.py  test_items.py  test_main.py  test_notify.py  test_reader.py  test_state.py
tools/podcast-bookmark/: Package.swift
tools/podcast-bookmark/.build/: build.db  release.yaml
tools/podcast-bookmark/.build/arm64-apple-macosx/release/: description.json  podcast-bookmark
tools/podcast-bookmark/.build/arm64-apple-macosx/release/ModuleCache/1CE9MG16SKB3S/: MachO-1E48RKM8MIOQ3.pcm  ObjectiveC-3HFLVFB2XGC12.pcm  SwiftShims-6PVXR3VD9JVP.pcm  (+14 more)
tools/podcast-bookmark/.build/arm64-apple-macosx/release/Modules/: podcast_bookmark.swiftdoc  podcast_bookmark.swiftmodule  podcast_bookmark.swiftsourceinfo
tools/podcast-bookmark/.build/arm64-apple-macosx/release/podcast-bookmark.product/: Objects.LinkFileList
tools/podcast-bookmark/.build/arm64-apple-macosx/release/podcast_bookmark.build/: output-file-map.json  podcast_bookmark.d  sources
tools/podcast-bookmark/Sources/: main.swift
(+62 files in other folders)
