[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hi-sweetheart"
version = "0.1.0"
description = "Reads iMessages, classifies linked content via Claude API, executes actions"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
hi-sweetheart = "hi_sweetheart.main:main"

[tool.setuptools.packages.find]
where = ["src"]
